// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`displayRoutineList > should display a routine list by calling getRoutineUserInfo 1`] = `
[MockFunction log] {
  "calls": [
    [
      "[1m[100m📃 List all of routine:[49m[22m",
    ],
    [
      "[90m┌──────────[39m[90m┬───────────────────[39m[90m┬──────────────────[39m[90m┬───────────────┐[39m
[90m│[39m[31m Name     [39m[90m│[39m[31m Created           [39m[90m│[39m[31m Description      [39m[90m│[39m[31m Specification [39m[90m│[39m
[90m├──────────[39m[90m┼───────────────────[39m[90m┼──────────────────[39m[90m┼───────────────┤[39m
[90m│[39m routine1 [90m│[39m 2022/1/1 08:00:00 [90m│[39m Hello world      [90m│[39m spec1         [90m│[39m
[90m├──────────[39m[90m┼───────────────────[39m[90m┼──────────────────[39m[90m┼───────────────┤[39m
[90m│[39m routine2 [90m│[39m 2022/1/2 08:00:00 [90m│[39m This is a string [90m│[39m spec2         [90m│[39m
[90m└──────────[39m[90m┴───────────────────[39m[90m┴──────────────────[39m[90m┴───────────────┘[39m",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`displayRoutineList > should display empty table if versionList is empty 1`] = `
[MockFunction log] {
  "calls": [
    [
      "[90m┌──────[39m[90m┬─────────[39m[90m┬─────────────[39m[90m┬───────────────┐[39m
[90m│[39m[31m Name [39m[90m│[39m[31m Created [39m[90m│[39m[31m Description [39m[90m│[39m[31m Specification [39m[90m│[39m
[90m└──────[39m[90m┴─────────[39m[90m┴─────────────[39m[90m┴───────────────┘[39m",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`displayRoutineList > should display routine list in a table 1`] = `
[MockFunction log] {
  "calls": [
    [
      "[90m┌──────────[39m[90m┬───────────────────[39m[90m┬──────────────────[39m[90m┬───────────────┐[39m
[90m│[39m[31m Name     [39m[90m│[39m[31m Created           [39m[90m│[39m[31m Description      [39m[90m│[39m[31m Specification [39m[90m│[39m
[90m├──────────[39m[90m┼───────────────────[39m[90m┼──────────────────[39m[90m┼───────────────┤[39m
[90m│[39m routine1 [90m│[39m 2022/1/1 08:00:00 [90m│[39m Hello world      [90m│[39m spec1         [90m│[39m
[90m├──────────[39m[90m┼───────────────────[39m[90m┼──────────────────[39m[90m┼───────────────┤[39m
[90m│[39m routine2 [90m│[39m 2022/1/2 08:00:00 [90m│[39m This is a string [90m│[39m spec2         [90m│[39m
[90m└──────────[39m[90m┴───────────────────[39m[90m┴──────────────────[39m[90m┴───────────────┘[39m",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
